# DrillingEngineeringOperations

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: dotnet-desktop.yml  msbuild.yml
APIHydraulicsEquations/: README.md
APIHydraulicsEquations/DrillCollarPressureDrop/: main.py
APIHydraulicsEquations/DrillPipeCasingAnnularPressureDrop/: main.py
APIHydraulicsEquations/PressureLosses/: main.py
APIHydraulicsEquations/SurfaceLinePressureDrop/: main.cpp  main.py
APIHydraulicsEquations/utils/: conversions.hpp  conversions.py
DrillingSystem/: DrillingSystem.slnx
DrillingSystem/DrillingConsole/: Dockerfile  DrillingConsole.csproj  DrillingConsole.slnx  Program.cs
DrillingSystem/DrillingEngine/: DrillingEngine.slnx  DrillingEngine.vcxproj  cpp.hint  (+3 more)
HoistingSystem/: HoistingSystem.slnx  HoistingSystem.vcxproj  HoistingSystem.vcxproj.filters
HydraulicsEquations/: HydraulicsEquations.pyproj  HydraulicsEquations.slnx  README.md  docs.txt  pyproject.toml
HydraulicsEquations/src/HydraulicsEquations/: __init__.py  __main__.py  cli.py
HydraulicsEquations/src/HydraulicsEquations.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
HydraulicsEquations/src/HydraulicsEquations/application/: Application.py  application.py
HydraulicsEquations/src/HydraulicsEquations/calculations/: conversions.py  drill_collar_hole_annular_pressure_drop.py  drill_collar_pressure_drop.py  drill_pipe_casing_annular_pressure_drop.py  drill_pipe_hole_annular_pressure_drop.py  drill_pipe_pressure_drop.py  pressure_losses.py  surface_line_pressure_drop.py
(+97 files in other folders)
