[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Hydraulics Equations"
version = "0.1.0"
description = "Hydraulic Equations calculations based on American Petroleum Institute (API)."
dependencies = [
    "click",
    "requests",
]

[project.scripts]
my-command = "HydraulicsEquations.cli:main"